--- a/manifest.json
+++ b/manifest.json
@@ -30,5 +30,13 @@
     "48": "images/get_started48.png",
     "128": "images/get_started128.png"
   },
+  "commands": {
+    "add-selected-phrase": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+A"
+      },
+      "description": "Highlight currently selected phrase"
+    }
+  },
   "manifest_version": 2
 }
