--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   "content_scripts": [
     {
       "matches": ["*://*/*"],
-      "js": ["highlighter.js"],
+      "js": ["highlighter.js", "matcher.js"],
       "css": ["highlighter.css"]
     }
   ],
